# porti

./: .gitignore  Cargo.toml  Makefile  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/source_control/: Cargo.toml  Dockerfile  config.json  config.local.json  package.json
apps/source_control/src/: config.rs  main.rs  metrics.rs
apps/source_control/src/startup/: eventstore.rs  mod.rs  postgres.rs
benchmarks/: Cargo.toml  package.json
benchmarks/files/: middle-names.json
benchmarks/src/: main.rs  store.rs
benchmarks/src/requests/: delete_platform_account.rs  get_organization.rs  get_organization_log.rs  get_organizations.rs  mod.rs  openapi.rs  post_organizations.rs  post_platform_accounts.rs
infra/local/: compose.yaml  package.json
infra/local/loki/: loki-config.yaml
infra/local/otel/: otel-collector-config.yaml
infra/local_databases/: compose.yaml  package.json
infra/local_otel/: compose.yaml  package.json
infra/local_otel/grafana/provisioning/datasources/: datasources.yaml
infra/local_otel/loki/: loki-config.yaml
infra/local_otel/otel/: otel-collector-config.yaml
infra/local_otel/tempo/: tempo-config.yaml
