[package]
name = "source_control_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
log = {workspace = true}
rand = "0.9.0"
reqwest = { version = "0.12.12", features= ["stream"] }
serde = "1.0.217"
serde_json = "1.0.138"
structured-logger = "1.0.3"
tokio = { version = "1.43.0", features = ["full"] }
futures-util = {workspace = true}
chashmap = "2.2.2"
