[package]
name = "source_control"
version = "0.1.0"
edition = "2021"

[dependencies]
source_control_rest_interface = {path="../../packages/adapters/source_control/presentation/rest"}
source_control_event_store_interface = {path="../../packages/adapters/source_control/presentation/event_store"}
source_control_application = {path="../../packages/applications/source_control"}
source_control_event_store_persistence_adapter = {path="../../packages/adapters/source_control/persistence/event_store"}
source_control_postgres_persistence_adapter = {path="../../packages/adapters/source_control/persistence/postgres"}
actix-web = "4.9.0"
log = "0.4.25"
structured-logger = "1.0.3"
tokio = "1.43.0"
eventstore = "3.0.0"
tokio-postgres = "0.7.12"
