[package]
name = "source_control"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = { version = "*" }
opentelemetry = { version = "*", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "*", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "*", features = ["tonic", "metrics", "logs"] }
opentelemetry-semantic-conventions = { version = "*" }
tokio = { version = "1.0", features = ["full"] }
opentelemetry-appender-tracing = { version = "*", default-features = false}
tracing = {workspace = true}
tracing-core = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter","registry", "std"] }
tracing-opentelemetry = "0.28.0"
opentelemetry-stdout = "0.27.0"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tracing-log = "0.2.0"
tracing-actix-web = "0.7.15"

source_control_rest_interface = {path="../../packages/adapters/source_control/presentation/rest"}
source_control_event_store_interface = {path="../../packages/adapters/source_control/presentation/event_store"}
source_control_application = {path="../../packages/applications/source_control"}
source_control_domain = {path="../../packages/domains/source_control"}
source_control_event_store_persistence_adapter = {path="../../packages/adapters/source_control/persistence/event_store"}
source_control_postgres_persistence_adapter = {path="../../packages/adapters/source_control/persistence/postgres"}
tracing_util = {path="../../packages/utils/tracing"}
actix_tracing_util= {path="../../packages/utils/actix_tracing"}

actix-web ={workspace = true}
eventstore = "3.0.0"
tokio-postgres = {workspace = true}
shaku = {workspace = true}
utoipa-actix-web = {workspace = true}
utoipa = {workspace = true}
env_logger = "0.10.0"
bb8-postgres ={workspace=true}
serde = "1.0.219"
config = "0.15.11"
